2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (on_select_video_file_activate):
	Fix ``GtkWarning: gtk_file_system_win32_get_parent: assertion
	`g_path_is_absolute (filename)' failed'' on Windows.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	Fix errors in previous commit.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol (prepare_paths):
	Refactor as with py2exe __file__ is not available.

	* data/icons/gaupol.ico:
	New icon for Windows.

	* doc/RELEASING.win32:
	New release checklist file.

	* gaupol/paths.py:
	Handle the special case of py2exe installations.

	* MANIFEST.in:
	Add doc/MODULES, doc/RELEASING and doc/RELEASING.win32.

	* setup.py:
	Add py2exe options and refactor file listings.

	* tools/data/gaupol.iss:
	New file for creating Inno Setup installers.

	* tools/py2exe.bat:
	New file for creating a Windows executable.

	* tools/translate (compile_data):
	New function for compiling data files.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/open.py:
	* gaupol/gtk/dialogs/file/save.py:
	* gaupol/gtk/dialogs/file/subtitle.py:
	Add missing "Auto-detected" encoding entry.

2007-08-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py (SDistGna.finalize_options):
	Fix value of self.dist_dir.

2007-08-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number to 0.10.

	RELEASE 0.10

2007-08-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.hearing-impaired.in:
	Loosen "Uppercase speakers before colons" pattern.

2007-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/error.py:
	Change "and" in description to "or".

2007-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.common-error.conf:
	* data/patterns/Latn-en.common-error.in:
	Remove "Spaces after capital letters" pattern.

2007-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/text-assistant-common-error-page.glade: